// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`Flex\` component should render correctly with \`className\` prop 1`] = `
<div
  className="flex __CLASSNAME__"
>
  __CONTENT__
</div>
`;

exports[`\`Flex\` component should render correctly with default props 1`] = `
<div
  className="flex"
>
  __CONTENT__
</div>
`;
